--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 
 <text>Caxopo</text>
-<img src:https://cdn.discordapp.com/attachments/964206521560997890/1102611330260815992/oriental-17.gif>
+<img src:"https://cdn.discordapp.com/attachments/964206521560997890/1102611330260815992/oriental-17.gif">
