--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
 
 <text>Caxopo</text>
 <img src="https://cdn.discordapp.com/attachments/964206521560997890/1102611330260815992/oriental-17.gif">
+<img src="https://static.lavozdigital.es/media/opinion/2021/11/07/v/vanpiro-esiten-kKiD--1200x630@abc.jpg">
+<text>¡Vanpiro esiten!</text>
